start server init

--- a/package.json
+++ b/package.json
@@ -17,5 +17,5 @@
   },
   "author": "Danie Lim",
   "license": "ISC",
-  "description": ""
+  "description": "Just a Simple To-Do App made using Angular 2 and the MEAN stack"
 }
